# rsqp

./: LICENSE  README.md  rsqp.py  rsqp_cutest.py  rsqp_example1.py  setup.cfg
cutest/: rsqp_cutest.py
examples/: rsqp_example1.py  rsqp_example2.py
rsqp_noiseaware.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: rsqp_core.py
