[metadata]
name = rsqp_noiseaware
version = 0.0.1
description = Noise tolerant SQP algorithm with relaxations
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
url = "https://github.com/figenoztoprak/rSQP"

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires = 
    numpy
    scipy
    qpsolvers

